CVSL-1165: Fix width of summary list key for out of bounds premises

--- a/assets/sass/components/_summary-table-override.scss
+++ b/assets/sass/components/_summary-table-override.scss
@@ -16,7 +16,7 @@
     }
     &--outofbounds-premises {
       .govuk-summary-list__key {
-        width: 15%;
+        width: 30%;
       }
       .govuk-summary-list__actions {
         width: 23%;
